[package]
name = "cryptolog-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
base64 = "0.21.2"
base64ct = "1.6.0"
chrono = "0.4.26"
clap = { version = "4.3.9", features = ["derive"] }
error-chain = "0.12.4"
hmac = "0.12.1"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.9.1"
sha2 = "0.10.7"
thiserror = "1.0.40"
