[package]
name = "cryptolog"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"
sha2 = "0.10"
hmac = "0.12"
base64 = "0.21"
args = "2.2"
typenum = "1.18"
processor = "0.1"

[dev-dependencies]
assert_cmd = "2.0"
